# templatize

./: .gitignore  Cargo.toml
lib/: evaluator.rs  fields.rs  lib.rs  template.rs
src/: cmd.yml  main.rs  templates.rs
tests/: field_test.rs
tests/expected/: basic_field.exp  object_fields.exp
tests/inputs/: basic_file.json  object_file.json
