[package]
name = "templatize"
version = "0.1.0"
authors = ["Maxime BAILLY <maxime.bailly-ext@sagemcom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
regex = "~1"
clap = { version = "~2", features = ["yaml"] }
