[package]
name = "templatize"
version = "0.1.0"
authors = ["Maxime BAILLY <maxbailly@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "templatize"
path = "lib/lib.rs"
test = false
bench = false

[[bin]]
name = "templatize"

[dependencies]
clap = { version = "~2", features = ["yaml"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
regex = "~1"
